# skypro_diplom2

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .vault_pass.txt  Dockerfile  README.md  ansible-vault  docker-compose.yaml  entrypoint.sh  env  pyproject.toml
.github/workflows/: actions.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  env
deploy/nginx/: default.conf
src/: Dockerfile  manage.py
src/bot/: models.py  serializers.py  urls.py  views.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/bot/tg/: client.py  models.py
src/bot/tg/fsm/: base.py  memory_storage.py
src/core/: admin.py  serializers.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_alter_goalcategory_unique_together.py  0003_goal.py  0004_goalcomment.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
src/goals/tests/: test_board.py
src/todolist/: filters.py  settings.py  urls.py  views.py
